--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "strava-v3": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
